tests/snapshots/gal_oranda_empty-public.snap
---
source: tests/integration_gallery/oranda_impl.rs
expression: "&snapshots"
---
================ public/artifacts/index.html ================
<!DOCTYPE html>
<html lang="en" id="oranda" class="dark">
    <head>
        <title>oranda-empty-test</title>
        
        
            <link rel="icon" href="/favicon.ico" />
        
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        
        <meta property="og:type" content="website" />
        <meta property="og:title" content="oranda-empty-test" />
        
        
        
        <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
        <link rel="stylesheet" href="/oranda.css" />
        
        
    </head>
    <body>
        <div class="container">
            <div class="page-body">
                
                    <div class="repo_banner">
                        <a href="https://github.com/oranda-gallery/oranda-empty-test">
                            <div class="github-icon" aria-hidden="true"></div>
                            Check out our GitHub!
                        </a>
                    </div>
                

                <main>
                    <header>
                        
                        <h1 class="title">oranda-empty-test</h1>
                        
    <nav class="nav">
        <ul>
            <li><a href="/">Home</a></li>

            

            
                <li><a href="/artifacts/">Install</a></li>
            

            

            

            
                <li><a href="/changelog/">Changelog</a></li>
            
        </ul>
    </nav>

                    </header>

                    
<div>
    <div class="package-managers-downloads">
        
    </div>
    <div>
        <h3>Downloads</h3>
        <table class="artifacts-table">
            <tbody>
                <tr>
                    <th>File</th>
                    <th>Platform</th>
                    
                </tr>
                
            </tbody>
        </table>
    </div>
</div>

                </main>
            </div>

            <footer>
                
                    <a href="https://github.com/oranda-gallery/oranda-empty-test"><div class="github-icon" aria-hidden="true"></div></a>
                
                <span>
                    oranda-empty-test
                </span>
            </footer>
        </div>

        
        

        
<script src="/artifacts.js"></script>

    </body>
</html>
================ public/artifacts.json ================
{"format_version":"0.4.0","tag":"0.1.0","formatted_date":null,"platforms_with_downloads":[],"downloadable_files":[],"release":{"artifacts":{"files":[],"installers":[],"targets":{}}},"os_script":"/artifacts.js","has_checksum_files":false}
================ public/changelog/index.html ================
<!DOCTYPE html>
<html lang="en" id="oranda" class="dark">
    <head>
        <title>oranda-empty-test</title>
        
        
            <link rel="icon" href="/favicon.ico" />
        
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        
        <meta property="og:type" content="website" />
        <meta property="og:title" content="oranda-empty-test" />
        
        
        
        <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
        <link rel="stylesheet" href="/oranda.css" />
        
        
    </head>
    <body>
        <div class="container">
            <div class="page-body">
                
                    <div class="repo_banner">
                        <a href="https://github.com/oranda-gallery/oranda-empty-test">
                            <div class="github-icon" aria-hidden="true"></div>
                            Check out our GitHub!
                        </a>
                    </div>
                

                <main>
                    <header>
                        
                        <h1 class="title">oranda-empty-test</h1>
                        
    <nav class="nav">
        <ul>
            <li><a href="/">Home</a></li>

            

            
                <li><a href="/artifacts/">Install</a></li>
            

            

            

            
                <li><a href="/changelog/">Changelog</a></li>
            
        </ul>
    </nav>

                    </header>

                    
<div>
    <h1>Releases</h1>
    <div class="releases-wrapper">
        <nav class="releases-nav">
            

            
                <p>No releases yet!</p>
            
            <ul>
                
            </ul>
        </nav>

        <div class="releases-list">
            
        </div>
    </div>
</div>

                </main>
            </div>

            <footer>
                
                    <a href="https://github.com/oranda-gallery/oranda-empty-test"><div class="github-icon" aria-hidden="true"></div></a>
                
                <span>
                    oranda-empty-test
                </span>
            </footer>
        </div>

        
        

        
<script src="/artifacts.js"></script>

    </body>
</html>
================ public/index.html ================
<!DOCTYPE html>
<html lang="en" id="oranda" class="dark">
    <head>
        <title>oranda-empty-test</title>
        
        
            <link rel="icon" href="/favicon.ico" />
        
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        
        <meta property="og:type" content="website" />
        <meta property="og:title" content="oranda-empty-test" />
        
        
        
        <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
        <link rel="stylesheet" href="/oranda.css" />
        
        
    </head>
    <body>
        <div class="container">
            <div class="page-body">
                
                    <div class="repo_banner">
                        <a href="https://github.com/oranda-gallery/oranda-empty-test">
                            <div class="github-icon" aria-hidden="true"></div>
                            Check out our GitHub!
                        </a>
                    </div>
                

                <main>
                    <header>
                        
                        <h1 class="title">oranda-empty-test</h1>
                        
    <nav class="nav">
        <ul>
            <li><a href="/">Home</a></li>

            

            
                <li><a href="/artifacts/">Install</a></li>
            

            

            

            
                <li><a href="/changelog/">Changelog</a></li>
            
        </ul>
    </nav>

                    </header>

                    

<p>hey</p>


                </main>
            </div>

            <footer>
                
                    <a href="https://github.com/oranda-gallery/oranda-empty-test"><div class="github-icon" aria-hidden="true"></div></a>
                
                <span>
                    oranda-empty-test
                </span>
            </footer>
        </div>

        
        

        

    <script src="/artifacts.js"></script>


    </body>
</html>

